[project]
name = "railway-mdism-test"
version = "0.1.0"
description = "test"
authors = [
    {name = "LGVil97",email = "gerardo_vilchis97@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "python-dotenv==1.1.0",
    "nicegui==2.14.1",
    "paho-mqtt==2.1.0"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
